force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <description>An object to store Referral information</description>
    <label>Referral</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>