force-app/main/default/objects/Referral__c/fields/Account_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_State__c</fullName>
    <description>Shipping State from the Account record</description>
    <formula>Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shipping State from the Account record</inlineHelpText>
    <label>Account Shipping State</label>
    <type>Text</type>
</CustomField>