force-app/main/default/objects/Referral__c/fields/AccountFedId__c.field-meta.xml
<CustomField>
    <fullName>AccountFedId__c</fullName>
    <formula>Account__r.Federal_ID_Number__c</formula>
    <inlineHelpText>The Fed Id Number from the Account Record.</inlineHelpText>
    <label>Account Fed Id</label>
    <type>Text</type>
</CustomField>