force-app/main/default/objects/Referral__c/fields/acd_name__c.field-meta.xml
<CustomField>
    <fullName>acd_name__c</fullName>
    <description>brought over from task when NSR is creating a referral, will be pushed to Selling opportunity 
case #22293852</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ACD Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>