force-app/main/default/objects/Referral__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If an activity is getting created, the date of the activity.</inlineHelpText>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>