force-app/main/default/objects/Referral__c/fields/ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Date (for a task) or DateTime (for an event) for the activity created with a selling Opportunity</inlineHelpText>
    <label>Activity DateTime</label>
    <type>DateTime</type>
</CustomField>