force-app/main/default/objects/Referral__c/fields/ActivityDateTimeFormatted__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTimeFormatted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A formatted version of the activity datetime in the time zone of the recipient.</inlineHelpText>
    <label>Activity DateTime Formatted</label>
    <length>60</length>
    <type>Text</type>
</CustomField>