force-app/main/default/objects/Referral__c/fields/ActualRevenue__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenue__c</fullName>
    <description>Revenue entered by Corporate Commissions relating to Bank lead sales</description>
    <label>Actual Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>