force-app/main/default/objects/Referral__c/fields/AdditionalProductsOfInterest__c.field-meta.xml
<CustomField>
    <fullName>AdditionalProductsOfInterest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If there are additional products the prospect is interested in, and we didn&apos;t create an opportunity, list them here (semi-colon separated)</inlineHelpText>
    <label>Additional Products of Interest</label>
    <length>200</length>
    <type>Text</type>
</CustomField>