force-app/main/default/objects/Referral__c/fields/AMP_Status__c.field-meta.xml
<CustomField>
    <fullName>AMP_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AMP Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>