force-app/main/default/objects/Referral__c/fields/Amplifinity_Referral__c.field-meta.xml
<CustomField>
    <fullName>Amplifinity_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amplifinity Referral</label>
    <referenceTo>amp_dev__Amp_Referral__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>