force-app/main/default/objects/Referral__c/fields/ApprovedCount__c.field-meta.xml
<CustomField>
    <fullName>ApprovedCount__c</fullName>
    <inlineHelpText>The number of times this record was set to Approved.</inlineHelpText>
    <label>Approved Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>