force-app/main/default/objects/Referral__c/fields/AR_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AR Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>