force-app/main/default/objects/Referral__c/fields/Bank_Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Referral_Fee__c</fullName>
    <label>3rd Party Referral Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>