force-app/main/default/objects/Referral__c/fields/BankRevenue__c.field-meta.xml
<CustomField>
    <fullName>BankRevenue__c</fullName>
    <description>Used by Corporate Commissions to calculate payment to bank on referrals</description>
    <formula>ActualRevenue__c * BankRevenuePct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>