force-app/main/default/objects/Referral__c/fields/BypassRelatedOwnerUpdate__c.field-meta.xml
<CustomField>
    <fullName>BypassRelatedOwnerUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bypass the update of the owner on the related objects. This is a one time bypass (flag is reset after the save).</inlineHelpText>
    <label>Bypass Related Owner Update</label>
    <type>Checkbox</type>
</CustomField>