force-app/main/default/objects/Referral__c/fields/Cadence_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Touchpoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is created directly off the touchpoint, link to it here.</inlineHelpText>
    <label>Cadence Touchpoint</label>
    <referenceTo>Cadence_Touchpoint__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>