force-app/main/default/objects/Referral__c/fields/Commission_Products__c.field-meta.xml
<CustomField>
    <fullName>Commission_Products__c</fullName>
    <description>list of high level products used by commissions auditing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Products</label>
    <length>240</length>
    <type>Text</type>
</CustomField>