force-app/main/default/objects/Referral__c/fields/CommissionOverride__c.field-meta.xml
<CustomField>
    <fullName>CommissionOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default, once the disposition is SLD, any updates are not allowed to the bank fields - this will allow the update to occur.</description>
    <label>Commission Override</label>
    <type>Checkbox</type>
</CustomField>