force-app/main/default/objects/Referral__c/fields/Consent_to_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Text__c</fullName>
    <description>Allows User to see if Source Contact gave Consent to Text from the Opportunity.</description>
    <formula>SourceContact__r.Consent_to_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent to Text</label>
    <type>Checkbox</type>
</CustomField>