force-app/main/default/objects/Referral__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Paychex employee this referral is for.</inlineHelpText>
    <label>Refer To Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Paychex employee as a Contact.</errorMessage>
        <filterItems>
            <field>Contact.HR_Person_Id__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>startsWith</operation>
            <value>Paychex Inc SA</value>
        </filterItems>
        <infoMessage>A Paychex Employee must be selected as a Contact</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Contact)</relationshipLabel>
    <relationshipName>Internal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>