force-app/main/default/objects/Referral__c/fields/CreateSellerEvent__c.field-meta.xml
<CustomField>
    <fullName>CreateSellerEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Create an event for the selling opportunity?</inlineHelpText>
    <label>Create Seller Event</label>
    <type>Checkbox</type>
</CustomField>