force-app/main/default/objects/Referral__c/fields/CreateSellerTask__c.field-meta.xml
<CustomField>
    <fullName>CreateSellerTask__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Create a task for the selling rep when the selling opportunity is created?</inlineHelpText>
    <label>Create Seller Task</label>
    <type>Checkbox</type>
</CustomField>