force-app/main/default/objects/Referral__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <description>passed in from AR - when referral credit is paid</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>