force-app/main/default/objects/Referral__c/fields/DateLeadSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateLeadSubmitted__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date a lead was submitted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Lead Submitted</label>
    <type>Date</type>
</CustomField>