force-app/main/default/objects/Referral__c/fields/DM__c.field-meta.xml
<CustomField>
    <fullName>DM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for NSS - Case 21556666</description>
    <inlineHelpText>Decision Maker</inlineHelpText>
    <label>DM</label>
    <type>Checkbox</type>
</CustomField>