force-app/main/default/objects/Referral__c/fields/DSA__c.field-meta.xml
<CustomField>
    <fullName>DSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is being submitted for a Sales Rep, this is their DSA - will be used to allow them to approve a record.</inlineHelpText>
    <label>DSA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals_DSA</relationshipName>
    <type>Lookup</type>
</CustomField>