force-app/main/default/objects/Referral__c/fields/DSM__c.field-meta.xml
<CustomField>
    <fullName>DSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is being submitted for a Sales Rep, this is their DSM - will be used for emails</inlineHelpText>
    <label>DSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>