force-app/main/default/objects/Referral__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email of the Contact or Referral Contact the email will be sent to.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>