force-app/main/default/objects/Referral__c/fields/EOL_Reason__c.field-meta.xml
<CustomField>
    <fullName>EOL_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EOL Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>