force-app/main/default/objects/Referral__c/fields/FedIdNumber__c.field-meta.xml
<CustomField>
    <fullName>FedIdNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Fed Id of the client.</inlineHelpText>
    <label>Fed Id Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>