force-app/main/default/objects/Referral__c/fields/Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funnel Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>