force-app/main/default/objects/Referral__c/fields/HR_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>HR_Person_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The HR Person Id of the Employee</inlineHelpText>
    <label>HR Person Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>