force-app/main/default/objects/Referral__c/fields/Inbound_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If an Inbound Opportunity already exists for the account and was created in the last 90 days
Then the Inbound Opp will be populated into this Lookup field on the ‘Internal Referral’ Referral record</description>
    <inlineHelpText>If an Inbound Opportunity already exists for the account and was created in the last 90 days
Then the Inbound Opp will be populated into this Lookup field on the ‘Internal Referral’ Referral record</inlineHelpText>
    <label>Inbound Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referrals (Inbound Opportunity)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>