force-app/main/default/objects/Referral__c/fields/IsAncillary__c.field-meta.xml
<CustomField>
    <fullName>IsAncillary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this an ancillary referral?</inlineHelpText>
    <label>Is Ancillary?</label>
    <type>Checkbox</type>
</CustomField>