force-app/main/default/objects/Referral__c/fields/LatestReferral__c.field-meta.xml
<CustomField>
    <fullName>LatestReferral__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the latest Referral record for the attached Lead/Contact/Account?</inlineHelpText>
    <label>Latest Referral?</label>
    <type>Checkbox</type>
</CustomField>