force-app/main/default/objects/Referral__c/fields/MonthSaleReported__c.field-meta.xml
<CustomField>
    <fullName>MonthSaleReported__c</fullName>
    <description>Entered by Corporate Commissions, bank will be paid the month following this date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Month Sale Reported</label>
    <type>Date</type>
</CustomField>