force-app/main/default/objects/Referral__c/fields/MQL_Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date_Entered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MQL - Date Entered</label>
    <type>DateTime</type>
</CustomField>