force-app/main/default/objects/Referral__c/fields/MQL_Marketo_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>MQL_Marketo_Lead_Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MQL - Marketo Lead Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>