force-app/main/default/objects/Referral__c/fields/MQL_Stage_Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>MQL_Stage_Duration_in_Minutes__c</fullName>
    <formula>(MQL_Date_Exited__c - MQL_Date_Entered__c)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL - Stage Duration in Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>