force-app/main/default/objects/Referral__c/fields/NbrOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NbrOfEmployees__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals
Label updated for case 27456769</description>
    <label>Commissions Employee Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>