force-app/main/default/objects/Referral__c/fields/No_Referring_Opty_Needed__c.field-meta.xml
<CustomField>
    <fullName>No_Referring_Opty_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set to True if a Referring Opportunity is not needed for this referral.  Created for Lg Mkt Wholesaler referrals.</description>
    <inlineHelpText>set to True if no Referring Opty is needed.</inlineHelpText>
    <label>No Referring Opty Needed</label>
    <type>Checkbox</type>
</CustomField>