force-app/main/default/objects/Referral__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any notes to be passed on about this referral</inlineHelpText>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>