force-app/main/default/objects/Referral__c/fields/NotifyOwner__c.field-meta.xml
<CustomField>
    <fullName>NotifyOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be used to notify the owner of the contact or lead attached to this referral.</inlineHelpText>
    <label>Notify Owner</label>
    <type>Checkbox</type>
</CustomField>