force-app/main/default/objects/Referral__c/fields/Original_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Original_Employee_Count__c</fullName>
    <description>This number represents the number of employees that were on the Account at the time that the Opportunity was created. This number is not editable.</description>
    <label>Original Employee Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>