force-app/main/default/objects/Referral__c/fields/Original_Owner_was_Queue__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner_was_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this assigned to a queue that then round robinned?</description>
    <label>Original Owner was Queue</label>
    <type>Checkbox</type>
</CustomField>