force-app/main/default/objects/Referral__c/fields/Owner_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile_Name__c</fullName>
    <description>Owner Profile Name</description>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Profile Name</label>
    <type>Text</type>
</CustomField>