force-app/main/default/objects/Referral__c/fields/PartnerDetail__c.field-meta.xml
<CustomField>
    <fullName>PartnerDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Detail</label>
    <referenceTo>PartnerDetail__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>