force-app/main/default/objects/Referral__c/fields/PartnerReferral__c.field-meta.xml
<CustomField>
    <fullName>PartnerReferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup back to the Partner Referral object.</description>
    <label>Partner Referral</label>
    <referenceTo>PartnerReferral__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>