force-app/main/default/objects/Referral__c/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <formula>TEXT(Referral_Partner__r.Partner_Type__c)</formula>
    <inlineHelpText>The type of referral partner this is.</inlineHelpText>
    <label>Partner Type</label>
    <type>Text</type>
</CustomField>