force-app/main/default/objects/Referral__c/fields/PendingRunOfPayroll__c.field-meta.xml
<CustomField>
    <fullName>PendingRunOfPayroll__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pending Run of Payroll</label>
    <type>Date</type>
</CustomField>