force-app/main/default/objects/Referral__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the referral listed first on the referral form of the partners selected. If only one is selected that will always be checked, otherwise it will be the referral partner with the lowest sort order.</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>