force-app/main/default/objects/Referral__c/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>System information that occurs during processing.</inlineHelpText>
    <label>Process Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>