force-app/main/default/objects/Referral__c/fields/ReferFromContact__c.field-meta.xml
<CustomField>
    <fullName>ReferFromContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The paychex employee contact the referral is coming from</inlineHelpText>
    <label>Refer From Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Paychex Inc SA</value>
        </filterItems>
        <filterItems>
            <field>Contact.HR_Person_Id__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Refer From Contact)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>