force-app/main/default/objects/Referral__c/fields/Referral_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Approved_Date__c</fullName>
    <description>APR0130503: Populated when the Referral Status field gets set to Approved
Allows consistent reporting with year over year reporting. Takes into account when Splits occur and a separate Opp gets created that aren&apos;t count twice. The referral will move to the new opp so, with this field we can report in correct month.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Approved Date</label>
    <type>DateTime</type>
</CustomField>