force-app/main/default/objects/Referral__c/fields/Referral_Approved_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Referral_Approved_Timeframe__c</fullName>
    <description>APR0130503: Captures TimeFrame for Referral Approved Date field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Approved Timeframe</label>
    <length>12</length>
    <type>Text</type>
</CustomField>