force-app/main/default/objects/Referral__c/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field should only be completed if the Lead Source is an external partner (CPA, Bank, FA, etc.)</inlineHelpText>
    <label>Referral Contact</label>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>