force-app/main/default/objects/Referral__c/fields/Referral_Id__c.field-meta.xml
<CustomField>
    <fullName>Referral_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique id for the referral.</inlineHelpText>
    <label>Referral Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>