force-app/main/default/objects/Referral__c/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The type of referral partner.</inlineHelpText>
    <label>Referral Partner</label>
    <referenceTo>Referral_Partner__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>