force-app/main/default/objects/Referral__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <description>used by internal referral code. Wholesalers don&apos;t need selling opportunity created.</description>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>