force-app/main/default/objects/Referral__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <formula>TEXT(Referral_Partner__r.Partner_Type__c)</formula>
    <inlineHelpText>The type of referral this is.</inlineHelpText>
    <label>Referral Type</label>
    <type>Text</type>
</CustomField>