force-app/main/default/objects/Referral__c/fields/ReferralJoin__c.field-meta.xml
<CustomField>
    <fullName>ReferralJoin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If more than one referral was created at the same time, a link between the records.</inlineHelpText>
    <label>Referral Join</label>
    <referenceTo>ReferralJoin__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>