force-app/main/default/objects/Referral__c/fields/ReferralNotes__c.field-meta.xml
<CustomField>
    <fullName>ReferralNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any notes that occurred as part of the referral process.</inlineHelpText>
    <label>Referral Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>