force-app/main/default/objects/Referral__c/fields/ReferralPartnerName__c.field-meta.xml
<CustomField>
    <fullName>ReferralPartnerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name from the Referral Partner record</inlineHelpText>
    <label>Referral Partner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>