force-app/main/default/objects/Referral__c/fields/ReferralSourceAccount__c.field-meta.xml
<CustomField>
    <fullName>ReferralSourceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The account of the referral source</inlineHelpText>
    <label>Referral Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Referral Source Account)</relationshipLabel>
    <relationshipName>ReferralSource</relationshipName>
    <type>Lookup</type>
</CustomField>