force-app/main/default/objects/Referral__c/fields/ReferralSourceContact__c.field-meta.xml
<CustomField>
    <fullName>ReferralSourceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact record of the referring partner</inlineHelpText>
    <label>Referral Source Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Referral Source Contact)</relationshipLabel>
    <relationshipName>ReferralSource</relationshipName>
    <type>Lookup</type>
</CustomField>