force-app/main/default/objects/Referral__c/fields/Referring_Employee_Title__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee_Title__c</fullName>
    <description>The title of the referring employee</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referring Employee Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>