force-app/main/default/objects/Referral__c/fields/Referring_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Referring_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Opportunity for the Referring Rep</inlineHelpText>
    <label>Referring Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referrals - Referring</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>