force-app/main/default/objects/Referral__c/fields/Referring_User__c.field-meta.xml
<CustomField>
    <fullName>Referring_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Referring User</inlineHelpText>
    <label>Referring User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>